// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Node Details Generator > Name type = name 	 ID type = int 1`] = `
{
  "displayName": "A Mocked Name",
  "id": "1",
}
`;

exports[`Node Details Generator > Name type = name 	 ID type = int 2`] = `
{
  "displayName": "A Mocked Name",
  "id": "2",
}
`;

exports[`Node Details Generator > Name type = name 	 ID type = nanoid 1`] = `
{
  "displayName": "A Mocked Name",
  "id": "mockId",
}
`;

exports[`Node Details Generator > Name type = name 	 ID type = nanoid 2`] = `
{
  "displayName": "A Mocked Name",
  "id": "mockId",
}
`;

exports[`Node Details Generator > Name type = occurrence 	 ID type = int 1`] = `
{
  "displayName": "1",
  "id": "1",
}
`;

exports[`Node Details Generator > Name type = occurrence 	 ID type = int 2`] = `
{
  "displayName": "1-2",
  "id": "2",
}
`;

exports[`Node Details Generator > Name type = occurrence 	 ID type = nanoid 1`] = `
{
  "displayName": "1",
  "id": "mockId",
}
`;

exports[`Node Details Generator > Name type = occurrence 	 ID type = nanoid 2`] = `
{
  "displayName": "1-2",
  "id": "mockId",
}
`;
